# hrm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  handoff-output.yaml  justfile  prb.md
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 20260304_000001_initial_bootstrap.py  20260304_000002_audit_events.py  20260304_000003_staff_auth.py  20260304_000004_candidates_documents.py  20260304_000005_vacancies_pipeline.py  20260304_000006_cv_parsing_jobs.py  20260305_000007_employee_keys_revoke.py  20260306_000008_cv_analysis_fields.py  20260309_000009_match_scoring.py  20260309_000010_interviews.py  20260310_000011_interview_feedback.py  20260310_000012_offers.py  20260310_000013_hire_conversions.py  20260310_000014_employee_profiles.py  20260310_000015_onboarding_runs.py  20260310_000016_onboarding_templates.py  20260310_000017_onboarding_tasks.py  20260310_000018_employee_profile_staff_account_link.py  20260312_000019_vacancy_hiring_manager.py  20260313_000020_notifications.py  20260313_000021_kpi_snapshots.py  20260316_000022_automation_rules.py  20260316_000023_automation_execution_logs.py  20260319_000024_automation_metric_events.py  20260327_000025_employee_profile_avatars.py  20260327_000025_employee_referrals.py  20260327_000026_employee_directory_avatars.py  20260404_000027_compensation_controls.py  20260406_000028_departments.py
apps/backend/src/hrm_backend/: __init__.py  auth.py  main.py  rbac.py  settings.py
apps/backend/tests/: test_auth.py  test_core.py  test_health.py  test_rbac.py
apps/backend/tests/integration/: conftest.py
(+695 files in other folders)
