[project]
name = "hrm-backend"
version = "0.1.0"
description = "Backend service for HRM platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "celery>=5.4.0",
  "cryptography>=45.0.0",
  "fastapi>=0.115.0",
  "minio>=7.2.10",
  "openpyxl>=3.1.5",
  "passlib>=1.7.4",
  "argon2-cffi>=23.1.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=4.2.0",
  "python-multipart>=0.0.20",
  "pyjwt>=2.10.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
